--- a/src/app/home/home.page.scss
+++ b/src/app/home/home.page.scss
@@ -1,11 +1,5 @@
 #container {
-  text-align: center;
-
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 50%;
-  transform: translateY(-50%);
+  height: 100%;
 }
 
 #container strong {
@@ -24,4 +18,20 @@
 
 #container a {
   text-decoration: none;
+}
+#container > ion-card {
+  top: 20%
+}
+.fabIcon {
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin: 20px;
+}
+ion-fab {
+  margin-bottom: var(--ion-safe-area-bottom, 0);
+}
+
+.btn {
+  margin-top: 30px;
 }
